ex/ex_ANTLR/OneC/BSLParser.py
# Generated from BSLParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BSLParser ( Parser ):

    grammarFileName = "BSLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'.'", "'['", 
                     "']'", "<INVALID>", "<INVALID>", "':'", "';'", "','", 
                     "'='", "'+'", "'-'", "'<='", "'<>'", "'<'", "'>='", 
                     "'>'", "'*'", "'/'", "'%'", "'?'", "'&'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'#'", "'|'", "'~'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'!'" ]

    symbolicNames = [ "<INVALID>", "LINE_COMMENT", "WHITE_SPACE", "DOT", 
                      "LBRACK", "RBRACK", "LPAREN", "RPAREN", "COLON", "SEMICOLON", 
                      "COMMA", "ASSIGN", "PLUS", "MINUS", "LESS_OR_EQUAL", 
                      "NOT_EQUAL", "LESS", "GREATER_OR_EQUAL", "GREATER", 
                      "MUL", "QUOTIENT", "MODULO", "QUESTION", "AMPERSAND", 
                      "PREPROC_DELETE", "PREPROC_INSERT", "PREPROC_ENDINSERT", 
                      "HASH", "BAR", "TILDA", "TRUE", "FALSE", "UNDEFINED", 
                      "NULL", "DECIMAL", "DATETIME", "FLOAT", "STRING", 
                      "STRINGSTART", "STRINGTAIL", "STRINGPART", "PROCEDURE_KEYWORD", 
                      "FUNCTION_KEYWORD", "ENDPROCEDURE_KEYWORD", "ENDFUNCTION_KEYWORD", 
                      "EXPORT_KEYWORD", "VAL_KEYWORD", "ENDIF_KEYWORD", 
                      "ENDDO_KEYWORD", "IF_KEYWORD", "ELSIF_KEYWORD", "ELSE_KEYWORD", 
                      "THEN_KEYWORD", "WHILE_KEYWORD", "DO_KEYWORD", "FOR_KEYWORD", 
                      "TO_KEYWORD", "EACH_KEYWORD", "IN_KEYWORD", "TRY_KEYWORD", 
                      "EXCEPT_KEYWORD", "ENDTRY_KEYWORD", "RETURN_KEYWORD", 
                      "CONTINUE_KEYWORD", "RAISE_KEYWORD", "VAR_KEYWORD", 
                      "NOT_KEYWORD", "OR_KEYWORD", "AND_KEYWORD", "NEW_KEYWORD", 
                      "GOTO_KEYWORD", "BREAK_KEYWORD", "EXECUTE_KEYWORD", 
                      "ADDHANDLER_KEYWORD", "REMOVEHANDLER_KEYWORD", "ASYNC_KEYWORD", 
                      "IDENTIFIER", "UNKNOWN", "PREPROC_EXCLAMATION_MARK", 
                      "PREPROC_LPAREN", "PREPROC_RPAREN", "PREPROC_STRING", 
                      "PREPROC_NATIVE", "PREPROC_USE_KEYWORD", "PREPROC_REGION", 
                      "PREPROC_END_REGION", "PREPROC_NOT_KEYWORD", "PREPROC_OR_KEYWORD", 
                      "PREPROC_AND_KEYWORD", "PREPROC_IF_KEYWORD", "PREPROC_THEN_KEYWORD", 
                      "PREPROC_ELSIF_KEYWORD", "PREPROC_ENDIF_KEYWORD", 
                      "PREPROC_ELSE_KEYWORD", "PREPROC_MOBILEAPPCLIENT_SYMBOL", 
                      "PREPROC_MOBILEAPPSERVER_SYMBOL", "PREPROC_MOBILECLIENT_SYMBOL", 
                      "PREPROC_THICKCLIENTORDINARYAPPLICATION_SYMBOL", "PREPROC_THICKCLIENTMANAGEDAPPLICATION_SYMBOL", 
                      "PREPROC_EXTERNALCONNECTION_SYMBOL", "PREPROC_THINCLIENT_SYMBOL", 
                      "PREPROC_WEBCLIENT_SYMBOL", "PREPROC_ATCLIENT_SYMBOL", 
                      "PREPROC_CLIENT_SYMBOL", "PREPROC_ATSERVER_SYMBOL", 
                      "PREPROC_SERVER_SYMBOL", "PREPROC_MOBILE_STANDALONE_SERVER", 
                      "PREPROC_LINUX", "PREPROC_WINDOWS", "PREPROC_MACOS", 
                      "PREPROC_IDENTIFIER", "PREPROC_NEWLINE", "PREPROC_ANY", 
                      "ANNOTATION_ATSERVERNOCONTEXT_SYMBOL", "ANNOTATION_ATCLIENTATSERVERNOCONTEXT_SYMBOL", 
                      "ANNOTATION_ATCLIENTATSERVER_SYMBOL", "ANNOTATION_ATCLIENT_SYMBOL", 
                      "ANNOTATION_ATSERVER_SYMBOL", "ANNOTATION_BEFORE_SYMBOL", 
                      "ANNOTATION_AFTER_SYMBOL", "ANNOTATION_AROUND_SYMBOL", 
                      "ANNOTATION_CHANGEANDVALIDATE_SYMBOL", "ANNOTATION_CUSTOM_SYMBOL", 
                      "ANNOTATION_UNKNOWN", "PREPROC_ENDDELETE", "PREPROC_DELETE_ANY", 
                      "AWAIT_KEYWORD" ]

    RULE_file = 0
    RULE_preproc_native = 1
    RULE_usedLib = 2
    RULE_use = 3
    RULE_moduleAnnotations = 4
    RULE_shebang = 5
    RULE_regionStart = 6
    RULE_regionEnd = 7
    RULE_regionName = 8
    RULE_preproc_if = 9
    RULE_preproc_elsif = 10
    RULE_preproc_else = 11
    RULE_preproc_endif = 12
    RULE_preproc_expression = 13
    RULE_preproc_logicalOperand = 14
    RULE_preproc_logicalExpression = 15
    RULE_preproc_symbol = 16
    RULE_preproc_unknownSymbol = 17
    RULE_preproc_boolOperation = 18
    RULE_preprocessor = 19
    RULE_compilerDirectiveSymbol = 20
    RULE_compilerDirective = 21
    RULE_annotationName = 22
    RULE_annotationParamName = 23
    RULE_annotation = 24
    RULE_annotationParams = 25
    RULE_annotationParam = 26
    RULE_var_name = 27
    RULE_moduleVars = 28
    RULE_moduleVar = 29
    RULE_moduleVarsList = 30
    RULE_moduleVarDeclaration = 31
    RULE_subVars = 32
    RULE_subVar = 33
    RULE_subVarsList = 34
    RULE_subVarDeclaration = 35
    RULE_subName = 36
    RULE_subs = 37
    RULE_sub = 38
    RULE_procedure = 39
    RULE_function = 40
    RULE_procDeclaration = 41
    RULE_funcDeclaration = 42
    RULE_subCodeBlock = 43
    RULE_continueStatement = 44
    RULE_breakStatement = 45
    RULE_raiseStatement = 46
    RULE_ifStatement = 47
    RULE_ifBranch = 48
    RULE_elsifBranch = 49
    RULE_elseBranch = 50
    RULE_whileStatement = 51
    RULE_forStatement = 52
    RULE_forEachStatement = 53
    RULE_tryStatement = 54
    RULE_returnStatement = 55
    RULE_executeStatement = 56
    RULE_callStatement = 57
    RULE_waitStatement = 58
    RULE_labelName = 59
    RULE_label = 60
    RULE_gotoStatement = 61
    RULE_tryCodeBlock = 62
    RULE_exceptCodeBlock = 63
    RULE_event = 64
    RULE_handler = 65
    RULE_addHandlerStatement = 66
    RULE_removeHandlerStatement = 67
    RULE_ternaryOperator = 68
    RULE_waitExpression = 69
    RULE_fileCodeBlockBeforeSub = 70
    RULE_fileCodeBlock = 71
    RULE_codeBlock = 72
    RULE_numeric = 73
    RULE_paramList = 74
    RULE_param = 75
    RULE_defaultValue = 76
    RULE_constValue = 77
    RULE_multilineString = 78
    RULE_string = 79
    RULE_statement = 80
    RULE_assignment = 81
    RULE_callParamList = 82
    RULE_callParam = 83
    RULE_expression = 84
    RULE_operation = 85
    RULE_compareOperation = 86
    RULE_boolOperation = 87
    RULE_unaryModifier = 88
    RULE_member = 89
    RULE_newExpression = 90
    RULE_typeName = 91
    RULE_methodCall = 92
    RULE_globalMethodCall = 93
    RULE_methodName = 94
    RULE_complexIdentifier = 95
    RULE_modifier = 96
    RULE_acceptor = 97
    RULE_lValue = 98
    RULE_accessCall = 99
    RULE_accessIndex = 100
    RULE_accessProperty = 101
    RULE_doCall = 102
    RULE_compoundStatement = 103

    ruleNames =  [ "file", "preproc_native", "usedLib", "use", "moduleAnnotations", 
                   "shebang", "regionStart", "regionEnd", "regionName", 
                   "preproc_if", "preproc_elsif", "preproc_else", "preproc_endif", 
                   "preproc_expression", "preproc_logicalOperand", "preproc_logicalExpression", 
                   "preproc_symbol", "preproc_unknownSymbol", "preproc_boolOperation", 
                   "preprocessor", "compilerDirectiveSymbol", "compilerDirective", 
                   "annotationName", "annotationParamName", "annotation", 
                   "annotationParams", "annotationParam", "var_name", "moduleVars", 
                   "moduleVar", "moduleVarsList", "moduleVarDeclaration", 
                   "subVars", "subVar", "subVarsList", "subVarDeclaration", 
                   "subName", "subs", "sub", "procedure", "function", "procDeclaration", 
                   "funcDeclaration", "subCodeBlock", "continueStatement", 
                   "breakStatement", "raiseStatement", "ifStatement", "ifBranch", 
                   "elsifBranch", "elseBranch", "whileStatement", "forStatement", 
                   "forEachStatement", "tryStatement", "returnStatement", 
                   "executeStatement", "callStatement", "waitStatement", 
                   "labelName", "label", "gotoStatement", "tryCodeBlock", 
                   "exceptCodeBlock", "event", "handler", "addHandlerStatement", 
                   "removeHandlerStatement", "ternaryOperator", "waitExpression", 
                   "fileCodeBlockBeforeSub", "fileCodeBlock", "codeBlock", 
                   "numeric", "paramList", "param", "defaultValue", "constValue", 
                   "multilineString", "string", "statement", "assignment", 
                   "callParamList", "callParam", "expression", "operation", 
                   "compareOperation", "boolOperation", "unaryModifier", 
                   "member", "newExpression", "typeName", "methodCall", 
                   "globalMethodCall", "methodName", "complexIdentifier", 
                   "modifier", "acceptor", "lValue", "accessCall", "accessIndex", 
                   "accessProperty", "doCall", "compoundStatement" ]

    EOF = Token.EOF
    LINE_COMMENT=1
    WHITE_SPACE=2
    DOT=3
    LBRACK=4
    RBRACK=5
    LPAREN=6
    RPAREN=7
    COLON=8
    SEMICOLON=9
    COMMA=10
    ASSIGN=11
    PLUS=12
    MINUS=13
    LESS_OR_EQUAL=14
    NOT_EQUAL=15
    LESS=16
    GREATER_OR_EQUAL=17
    GREATER=18
    MUL=19
    QUOTIENT=20
    MODULO=21
    QUESTION=22
    AMPERSAND=23
    PREPROC_DELETE=24
    PREPROC_INSERT=25
    PREPROC_ENDINSERT=26
    HASH=27
    BAR=28
    TILDA=29
    TRUE=30
    FALSE=31
    UNDEFINED=32
    NULL=33
    DECIMAL=34
    DATETIME=35
    FLOAT=36
    STRING=37
    STRINGSTART=38
    STRINGTAIL=39
    STRINGPART=40
    PROCEDURE_KEYWORD=41
    FUNCTION_KEYWORD=42
    ENDPROCEDURE_KEYWORD=43
    ENDFUNCTION_KEYWORD=44
    EXPORT_KEYWORD=45
    VAL_KEYWORD=46
    ENDIF_KEYWORD=47
    ENDDO_KEYWORD=48
    IF_KEYWORD=49
    ELSIF_KEYWORD=50
    ELSE_KEYWORD=51
    THEN_KEYWORD=52
    WHILE_KEYWORD=53
    DO_KEYWORD=54
    FOR_KEYWORD=55
    TO_KEYWORD=56
    EACH_KEYWORD=57
    IN_KEYWORD=58
    TRY_KEYWORD=59
    EXCEPT_KEYWORD=60
    ENDTRY_KEYWORD=61
    RETURN_KEYWORD=62
    CONTINUE_KEYWORD=63
    RAISE_KEYWORD=64
    VAR_KEYWORD=65
    NOT_KEYWORD=66
    OR_KEYWORD=67
    AND_KEYWORD=68
    NEW_KEYWORD=69
    GOTO_KEYWORD=70
    BREAK_KEYWORD=71
    EXECUTE_KEYWORD=72
    ADDHANDLER_KEYWORD=73
    REMOVEHANDLER_KEYWORD=74
    ASYNC_KEYWORD=75
    IDENTIFIER=76
    UNKNOWN=77
    PREPROC_EXCLAMATION_MARK=78
    PREPROC_LPAREN=79
    PREPROC_RPAREN=80
    PREPROC_STRING=81
    PREPROC_NATIVE=82
    PREPROC_USE_KEYWORD=83
    PREPROC_REGION=84
    PREPROC_END_REGION=85
    PREPROC_NOT_KEYWORD=86
    PREPROC_OR_KEYWORD=87
    PREPROC_AND_KEYWORD=88
    PREPROC_IF_KEYWORD=89
    PREPROC_THEN_KEYWORD=90
    PREPROC_ELSIF_KEYWORD=91
    PREPROC_ENDIF_KEYWORD=92
    PREPROC_ELSE_KEYWORD=93
    PREPROC_MOBILEAPPCLIENT_SYMBOL=94
    PREPROC_MOBILEAPPSERVER_SYMBOL=95
    PREPROC_MOBILECLIENT_SYMBOL=96
    PREPROC_THICKCLIENTORDINARYAPPLICATION_SYMBOL=97
    PREPROC_THICKCLIENTMANAGEDAPPLICATION_SYMBOL=98
    PREPROC_EXTERNALCONNECTION_SYMBOL=99
    PREPROC_THINCLIENT_SYMBOL=100
    PREPROC_WEBCLIENT_SYMBOL=101
    PREPROC_ATCLIENT_SYMBOL=102
    PREPROC_CLIENT_SYMBOL=103
    PREPROC_ATSERVER_SYMBOL=104
    PREPROC_SERVER_SYMBOL=105
    PREPROC_MOBILE_STANDALONE_SERVER=106
    PREPROC_LINUX=107
    PREPROC_WINDOWS=108
    PREPROC_MACOS=109
    PREPROC_IDENTIFIER=110
    PREPROC_NEWLINE=111
    PREPROC_ANY=112
    ANNOTATION_ATSERVERNOCONTEXT_SYMBOL=113
    ANNOTATION_ATCLIENTATSERVERNOCONTEXT_SYMBOL=114
    ANNOTATION_ATCLIENTATSERVER_SYMBOL=115
    ANNOTATION_ATCLIENT_SYMBOL=116
    ANNOTATION_ATSERVER_SYMBOL=117
    ANNOTATION_BEFORE_SYMBOL=118
    ANNOTATION_AFTER_SYMBOL=119
    ANNOTATION_AROUND_SYMBOL=120
    ANNOTATION_CHANGEANDVALIDATE_SYMBOL=121
    ANNOTATION_CUSTOM_SYMBOL=122
    ANNOTATION_UNKNOWN=123
    PREPROC_ENDDELETE=124
    PREPROC_DELETE_ANY=125
    AWAIT_KEYWORD=126

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fileCodeBlock(self):
            return self.getTypedRuleContext(BSLParser.FileCodeBlockContext,0)


        def EOF(self):
            return self.getToken(BSLParser.EOF, 0)

        def shebang(self):
            return self.getTypedRuleContext(BSLParser.ShebangContext,0)


        def moduleAnnotations(self):
            return self.getTypedRuleContext(BSLParser.ModuleAnnotationsContext,0)


        def preprocessor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BSLParser.PreprocessorContext)
            else:
                return self.getTypedRuleContext(BSLParser.PreprocessorContext,i)


        def moduleVars(self):
            return self.getTypedRuleContext(BSLParser.ModuleVarsContext,0)


        def fileCodeBlockBeforeSub(self):
            return self.getTypedRuleContext(BSLParser.FileCodeBlockBeforeSubContext,0)


        def subs(self):
            return self.getTypedRuleContext(BSLParser.SubsContext,0)


        def getRuleIndex(self):
            return BSLParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)




    def file_(self):

        localctx = BSLParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 209
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 208
                self.shebang()


            self.state = 212
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 211
                self.moduleAnnotations()


            self.state = 217
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 214
                    self.preprocessor() 
                self.state = 219
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 221
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 220
                self.moduleVars()


            self.state = 226
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 223
                    self.preprocessor() 
                self.state = 228
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 232
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 229
                self.fileCodeBlockBeforeSub()
                self.state = 230
                self.subs()


            self.state = 234
            self.fileCodeBlock()
            self.state = 235
            self.match(BSLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Preproc_nativeContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASH(self):
            return self.getToken(BSLParser.HASH, 0)

        def PREPROC_NATIVE(self):
            return self.getToken(BSLParser.PREPROC_NATIVE, 0)

        def getRuleIndex(self):
            return BSLParser.RULE_preproc_native

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreproc_native" ):
                listener.enterPreproc_native(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreproc_native" ):
                listener.exitPreproc_native(self)




    def preproc_native(self):

        localctx = BSLParser.Preproc_nativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_preproc_native)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 237
            self.match(BSLParser.HASH)
            self.state = 238
            self.match(BSLParser.PREPROC_NATIVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UsedLibContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PREPROC_STRING(self):
            return self.getToken(BSLParser.PREPROC_STRING, 0)

        def PREPROC_IDENTIFIER(self):
            return self.getToken(BSLParser.PREPROC_IDENTIFIER, 0)

        def getRuleIndex(self):
            return BSLParser.RULE_usedLib

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsedLib" ):
                listener.enterUsedLib(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsedLib" ):
                listener.exitUsedLib(self)




    def usedLib(self):

        localctx = BSLParser.UsedLibContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_usedLib)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 240
            _la = self._input.LA(1)
            if not(_la==81 or _la==110):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseContext(BSLParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASH(self):
            return self.getToken(BSLParser.HASH, 0)
